--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
     env:
       TEST_TIMEOUT_MINUTES: 30
       FSAC_TEST_DEFAULT_TIMEOUT : 120000 #ms, individual test timeouts
+      MSBUILDLIVELOGGER: true
     timeout-minutes: 30 # we have a locking issue, so cap the runs at ~20m to account for varying build times, etc
     strategy:
       matrix:
@@ -79,7 +80,7 @@ jobs:
       run: dotnet tool restore
 
     - name: Check format
-      run: dotnet build -t:CheckFormat /tl
+      run: dotnet build -t:CheckFormat
 
     - name: Run Build
       run: dotnet run --project build -t Build
