--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     env:
       TEST_TIMEOUT_MINUTES: 30
       FSAC_TEST_DEFAULT_TIMEOUT : 120000 #ms, individual test timeouts
-      MSBUILDLIVELOGGER: true
+      MSBUILDLIVELOGGER: auto
     timeout-minutes: 30 # we have a locking issue, so cap the runs at ~20m to account for varying build times, etc
     strategy:
       matrix:
