Ignore warn on debug

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,8 +7,10 @@
     <NoWarn>$(NoWarn);3186,0042</NoWarn><!-- circumvent an error with the fake dependencymanager for
     paket: https://github.com/dotnet/fsharp/issues/8678 -->
     <NoWarn>$(NoWarn);NU1902</NoWarn><!-- NU1902 - package vulnerability detected -->
-    <WarnOn>$(WarnOn);1182</WarnOn> <!-- Unused
+    <NoWarn>$(NoWarn);57</NoWarn>
+    <WarnOn Condition="'$(Configuration)' != 'Debug'">$(WarnOn);1182</WarnOn> <!-- Unused
     variables,https://learn.microsoft.com/en-us/dotnet/fsharp/language-reference/compiler-options#opt-in-warnings -->
+
     <WarnOn>$(WarnOn);3390</WarnOn><!-- Malformed XML doc comments -->
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <ChangelogFile>$(MSBuildThisFileDirectory)CHANGELOG.md</ChangelogFile>
